name:                Radixal
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/jhickner/radixal
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner
maintainer:          jhickner@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Radixal.Radixal
  -- other-modules:       
  build-depends:       base >= 4.5, 
                       list-tries >= 0.5,
                       hashable >= 1.2,
                       unordered-containers >= 0.2,
                       aeson >= 0.6,
                       text >= 0.11

